--- a/docs/基础/04链表/链表.md
+++ b/docs/基础/04链表/链表.md
@@ -124,13 +124,60 @@ class Solution {
 
 [23. 合并 K 个升序链表.md](..\..\题\leetcode\23. 合并 K 个升序链表.md) 
 
-### 🚀链表的中间结点
 
-因为考虑NULL节点：
+### 🚀反转链表
 
-​	奇数个返回中间。
+[206. 反转链表 - 力扣（LeetCode）](https://leetcode.cn/problems/reverse-linked-list/description/)
 
-​	偶数个返回中间偏右。不同于int是返回中间偏左。
+```java
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        // 单个的特殊
+        // 递归退出，最后一个递归是最后一个节点
+        if(head == null || head.next == null){
+            return head;
+        }
+        ListNode next = head.next;
+        ListNode last = reverseList(next);	// 当前是head 2，下一个节点是head.next 3
+        next.next = head;		// 让下一个节点指向自己
+        head.next = null;			// 断开原来的链接，防止循环
+        return last;					// 返回的是最后一个节点 3
+    }
+}
+
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        ListNode pre = null;
+        ListNode cur = head;
+        // 遍历节点
+        while(cur != null){
+            // 保存
+            ListNode next = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = next;
+        }
+        return pre;
+    }
+}
+```
+
+![image-20240928211755497](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409282117582.png)
+
+### pre cur前后双指针
+
+### slow fast快慢双指针
+
+#### 🚀链表的中间结点
+
+slow fast
+
+- 因为cur移动两格，`cur = cur.next.next`，所以 `cur != null && cur.next != null`，不然空指针异常
+
+算上NULL节点后的个数，就和int索引的规律一样：
+
+- 偶数个：返回中间偏左。→对应对应不算null的中间
+- 奇数个：返回中间。👉对应不算null的中间偏右
 
 ![image-20241010093910279](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202410100939317.png)
 
@@ -151,7 +198,7 @@ class Solution {
 
  [876. 链表的中间结点.md](..\..\题\leetcode\876. 链表的中间结点.md) 
 
-如果想返回中间和中间偏左，那么造一个dummy，中间→中间偏左，中间偏右→中间。
+如果想返回中间和中间偏左，那么**造一个dummy**，中间→中间偏左，中间偏右→中间。
 
 ```java
 class Solution {
@@ -173,48 +220,6 @@ class Solution {
 }
 ```
 
-### 🚀反转链表
-
-[206. 反转链表 - 力扣（LeetCode）](https://leetcode.cn/problems/reverse-linked-list/description/)
-
-```java
-class Solution {
-    public ListNode reverseList(ListNode head) {
-        // 单个的特殊
-        if(head == null){
-            return head;
-        }
-        // 递归退出，最后一个递归是最后一个节点
-        if(head.next == null){
-            return head;
-        }
-        ListNode last = reverseList(head.next);	// 当前是head 2，下一个节点是head.next 3
-        head.next.next = head;		// 让下一个节点指向自己
-        head.next = null;			// 断开原来的链接，防止循环
-        return last;					// 返回的是最后一个节点 3
-    }
-}
-
-class Solution {
-    public ListNode reverseList(ListNode head) {
-        ListNode pre = null;
-        ListNode cur = head;
-        // 遍历节点
-        while(cur != null){
-            // 保存
-            ListNode next = cur.next;
-            // pre <- next
-            cur.next = pre;
-            pre = cur;
-            cur = next;
-        }
-        return pre;
-    }
-}
-```
-
-![image-20240928211755497](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409282117582.png)
-
 ## 其他
 
 [链表 - 力扣（LeetCode）全球极客挚爱的技术成长平台](https://leetcode.cn/problem-list/linked-list/)
@@ -225,7 +230,7 @@ class Solution {
 
 
 
-> 删除元素 
+### 删除元素 
 
 [19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) ：快慢指针，删除要sentinel，找倒 n+1
 
@@ -243,13 +248,13 @@ class Solution {
 
 
 
-> 相交
+### 相交
 
 [160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) 
 
 
 
-> 环
+### 环
 
  [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) ：slow和fast相遇
 
@@ -257,7 +262,7 @@ class Solution {
 
  [获取倒n.md](..\..\题\leetcode\获取倒n.md) [19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) 
 
-> 链表进位：
+### 链表进位
 
  [2. 两数相加.md](..\..\题\leetcode\2. 两数相加.md)  ：**逆序**（进位往右，链表左对齐） 
 
@@ -265,6 +270,6 @@ class Solution {
 
 
 
-> 回文
+### 回文
 
  [234. 回文链表.md](..\..\题\leetcode\234. 回文链表.md) 
