--- a/docs/题/leetcode/23. 合并 K 个升序链表.md
+++ b/docs/题/leetcode/23. 合并 K 个升序链表.md
@@ -1,65 +1,71 @@
+[toc]
 
-## 🚀归并排序改
+[23. 合并 K 个升序链表 - 力扣（LeetCode）](https://leetcode.cn/problems/merge-k-sorted-lists/description/)
 
-$O(n k \log k), O(\log k)$
+## 🚀归并排序改: 2ms
 
-- `mergeSort()` 设置返回值，来供 合并两个链表的函数 `mergeTwoLists(l1, l2)` 传入链表头节点。
-- `mergeSort()` 分到单个元素时，就可以返回。当数组为空，那么`mergeSort()` 就不对，要特殊处理。
+$O(n \times k \log k)$
+
+- 带返回值
+  - 合并数组，可以索引 `arr[p1], arr[p2]`，那么链表数组的索引是什么？不是索引
+  - 是合并两个链表后的新链表头节点。
+
+- `if(l<r)` 
+  - 合并数组，那么我们管`l==r`的情况
+  - 合并链表，当`l==r`时，我们还需要返回 `lists[l]`
+
 
 ```java
 class Solution {
     public ListNode mergeKLists(ListNode[] lists) {
-        // 特殊处理 因为 lists[i]
-        if (lists.length == 0) {
+        int n = lists.length;
+        // 特殊处理：不然 lists[0] 超出索引。
+        if (n == 0) {
             return null;
         }
-
-        return mergeSort(lists, 0, lists.length - 1);
+        return merge(lists, 0, n - 1);
     }
 
-    public ListNode mergeSort(ListNode[] lists, int i, int j) {
-        if (i >= j) {
-            return lists[i];
-        }
-        int m = i + j >>> 1;
-        ListNode list1 = mergeSort(lists, i, m);
-        ListNode list2 = mergeSort(lists, m + 1, j);
-        ListNode list = mergeTwoLists(list1, list2);
-        return list;
-    }
+    public ListNode merge(ListNode[] lists, int l, int r) {
+        if (l < r) {
+            int m = l + r >>> 1;
+            ListNode p1 = merge(lists, l, m);
+            ListNode p2 = merge(lists, m + 1, r);
 
-    public ListNode mergeTwoLists(ListNode list1, ListNode list2) {
-        ListNode dummy = new ListNode(0);
-        ListNode cur = dummy;
-        while (list1 != null && list2 != null) {
-            if (list1.val < list2.val) {
-                cur.next = list1;
-                list1 = list1.next;
-            } else {
-                cur.next = list2;
-                list2 = list2.next;
+            ListNode dummy = new ListNode();
+            ListNode cur = dummy;
+            while (p1 != null && p2 != null) {
+                if (p1.val < p2.val) {
+                    cur.next = p1;
+                    p1 = p1.next;
+                } else {
+                    cur.next = p2;
+                    p2 = p2.next;
+                }
+                cur = cur.next;
             }
-            cur = cur.next;
+            if (p1 != null) {
+                cur.next = p1;
+            }
+            if (p2 != null) {
+                cur.next = p2;
+            }
+            return dummy.next;
         }
-        if (list1 != null) {
-            cur.next = list1;
-        } else {
-            cur.next = list2;
-        }
-        return dummy.next;
+        return lists[l];
     }
 }
 ```
 
-## 暴力数组排序
+## 提取出所有整数值，排序，新创链表: 6ms
 ```java
 class Solution {
     public ListNode mergeKLists(ListNode[] lists) {
         ArrayList<Integer> list = new ArrayList<>();
         ListNode cur = null;
-        for(ListNode l : lists){
+        for (ListNode l : lists) {
             cur = l;
-            while(cur!=null){
+            while (cur != null) {
                 list.add(cur.val);
                 cur = cur.next;
             }
@@ -67,7 +73,7 @@ class Solution {
         Collections.sort(list);
         ListNode sentinel = new ListNode(-1, null);
         cur = sentinel;
-        for(Integer i: list){
+        for (Integer i : list) {
             cur.next = new ListNode(i, null);
             cur = cur.next;
         }
@@ -76,8 +82,10 @@ class Solution {
 }
 ```
 
-## k个链表指针(不行)
-
 ## 两两链表合并
 
-$O(k^2n)$, O(1)
+$O(k^2n)$
+
+- 假设每个链表的最长长度是 *n*
+- 两两合并，相当于第i个链表的元素和第i+1、i+2、……、k个链表的元素都比较
+- 即握手问题 $\dfrac{k(k+1)}{2} * n$
