--- a/docs/题/leetcode/876. 链表的中间结点.md
+++ b/docs/题/leetcode/876. 链表的中间结点.md
@@ -1,16 +1,15 @@
-如果有两个中间结点，则返回第二个中间结点。即中间和中间偏右
+
+
+[876. 链表的中间结点 - 力扣（LeetCode）](https://leetcode.cn/problems/middle-of-the-linked-list/description/)
 
 ```java
 class Solution {
     public ListNode middleNode(ListNode head) {
-        if(head == null || head.next == null){
-            return head;
-        }
         ListNode slow = head;
         ListNode fast = head;
         while(fast != null && fast.next != null){
-            fast = fast.next.next;
             slow = slow.next;
+            fast = fast.next.next;
         }
         return slow;
     }
