--- a/docs/基础/03排序/排序.md
+++ b/docs/基础/03排序/排序.md
@@ -32,7 +32,7 @@
 
 ​	（1）一个quickSort递归函数，传入左边子区间和右边子区间 [l, r]
 
-​	（2）默认第一个是哨兵，左右双指针ij排序，先找右边的j再找左边的i，最后 i == j，填充哨兵。
+​	（2）左右区间`i<j` 默认第一个是哨兵，左右双指针ij排序，先找右边的j再找左边的i，最后 i == j，填充哨兵。
 
 ​	（3）下一次递归 `[l, i-1], [i+1, r]`，哨兵i不参与。
 
