--- a/docs/题/leetcode/82. 删除排序链表中的重复元素 II.md
+++ b/docs/题/leetcode/82. 删除排序链表中的重复元素 II.md
@@ -1,3 +1,5 @@
+[toc]
+
 ## cur、cur.next、cur.next.next
 
 cur从dummy开始，比较 next 和 nnext的值。
@@ -28,8 +30,9 @@ class Solution {
 
 ![image-20240929232105088](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409292321141.png)
 
-- 因为连当前cur重复的元素也要删除，故而引入哨兵。
 - pre不比较值，值是 cur 和 cur.next 比较
+- 因为连当前cur重复的元素也要删除，所以一直cur.val != cur.next.val 为止，然后让 pre 直接指向 cur.next
+- 因为 [2 2 3 3] 可能删除到一个都没有，故而引入哨兵。
 ```java
 class Solution {
     public ListNode deleteDuplicates(ListNode head) {
@@ -46,11 +49,11 @@ class Solution {
                     cur = cur.next;
                     // 省 cur ==null: 一个个跳，所以 cur.next 存在，cur必定存在
                     if(cur.next == null || cur.val != cur.next.val){    // 结尾；非重复元素
-                        pre.next = cur.next;
-                        cur = cur.next;
                         break;
                     }
                 }
+                pre.next = cur.next;
+                cur = cur.next;
             }else{
                 cur = cur.next;
                 pre = pre.next;
