--- a/docs/基础/01基础知识/时间复杂度.md
+++ b/docs/基础/01基础知识/时间复杂度.md
@@ -122,3 +122,10 @@ for (int i = 0; i < length - 1; i++) {
 
 那么就是 $\dfrac{(n-1+1)(n-1)}{2} = \dfrac{n(n-1)}{2}$，O(n)=n^2
 
+### hashmap
+
+用hashmap的时候要考虑一点：大量数据下的内存压力。
+
+这就是为什么有什么不用hashmap，而用流式处理的意义：
+
+- 判断链表的环：不用hashmap，而是用快慢指针。
