--- a/docs/基础/01基础知识/平台/力扣.md
+++ b/docs/基础/01基础知识/平台/力扣.md
@@ -1,5 +1,14 @@
-1. 力扣：不要定义静态变量。
-   
-    1116题目。多线程调了半天，`static volatile int i = 1;`怎么都不对。
 
-    原来case用例是相当于开了三个类实例，所以不能定义static变量。
+
+## 力扣：不要定义静态变量
+
+1116题目。多线程调了半天，`static volatile int i = 1;`怎么都不对。
+
+原来case用例是相当于开了三个类实例，所以不能定义static变量。
+
+## 删除做题记录
+
+其实没有云记录。
+
+都是本地记录，删除浏览器的本地存储就行
+
