--- a/docs/基础/09字符串和数组/数组.md
+++ b/docs/基础/09字符串和数组/数组.md
@@ -23,3 +23,12 @@
 
 如何挑选出数组中最小的、且不相邻的k个元素？ [3.md](..\题\笔试\pdd\25春\1\3.md) ，dfs遍历
 
+
+
+山脉、峰值
+
+🚀 [162. 寻找峰值.md](..\..\题\leetcode\162. 寻找峰值.md)：峰值模板
+
+ [852. 山脉数组的峰顶索引.md](..\..\题\leetcode\852. 山脉数组的峰顶索引.md) ：直接套模板
+
+ [1901. 寻找峰值 II.md](..\..\题\leetcode\1901. 寻找峰值 II.md)：二维数组
