--- a/docs/题/leetcode/162. 寻找峰值.md
+++ b/docs/题/leetcode/162. 寻找峰值.md
@@ -1,83 +1,67 @@
-二分变种
+[toc]
 
-## 首尾+中间
+> 数组可能包含多个峰值（其值严格大于左右相邻值的元素）
+>
+> 返回 **任何一个峰值** 所在位置即可。
+>
+> 你可以假设 `nums[-1] = nums[n] = -∞` 。
+>
+> 示例 1：
+>
+> 输入：nums = [1,2,3,1]
+> 输出：2
+> 解释：3 是峰值元素，你的函数应该返回其索引 2。
+> 示例 2：
+>
+> 输入：nums = [1,2,1,3,5,6,4]
+> 输出：1 或 5 
+> 解释：你的函数可以返回索引 1，其峰值元素为 2；
+>      或者返回索引 5， 其峰值元素为 6。
+>
+> - `1 <= nums.length <= 1000`
+> - 对于所有有效的 `i` 都有 `nums[i] != nums[i + 1]`：相邻元素不相等
+>
+> [162. 寻找峰值 - 力扣（LeetCode）](https://leetcode.cn/problems/find-peak-element/)
 
-（1）首先判断首尾（只需比较一个邻居，就是峰值）
 
-（2）然后判断中间元素（左右都小，才峰值）：[1, n - 2]
 
-​	左边大，那么峰值必然在左边。
+峰值的特征：
 
-​	右边大，那么峰值必然在右边。
+- 左边的元素比它小 ↗
+- 它比右边的元素大 ↘
 
-​	中间，那么峰值就是它。
 
-Q：情况2，必然有峰值吗？
 
-A：除非是平的，那么 【/ 。。。 \】必然存在峰值。
+两种写法：直接假设m是峰值的索引
 
-Q：【\/】会漏过右边，我们走左边，但如果左边是平的呢，不就找到严格大于的峰值了？而右边的正解也漏过了。
+- m-1 和 m
+  - arr[m-1] < arr[m]：m 属于 (1, m]。收缩左边i
+  - arr[m-1] > arr[m]：m 属于 (m, n-1]。收缩右边j
+  - 最后 j 落在 m 上（右边的最后一次移动是在m-1），i在m+1上（左边的最后是在m）
 
-A：确实漏过，但这题还有限定条件  `nums[i] != nums[i + 1] `任意两个相邻元素均不相等。
-
-​	 [1901. 寻找峰值 II.md](1901. 寻找峰值 II.md) 这道题，虽然没有解决漏洞，但换个思路。
+- m 和 m+1
+  - arr[m] < arr[m+1]：m 属于 (1, m)。收缩左边i
+  - arr[m] > arr[m+1]：m 属于 [m, n-1]。收缩右边j
+  - 最后 j 落在 m-1 上（右边的最后一次移动是在m），i在m上（左边的最后是在m-1）
 
 ```java
-// 162. 寻找峰值
 class Solution {
     public int findPeakElement(int[] nums) {
-        if (nums.length <= 1) {
+        int n = nums.length;
+        if (n == 1) {
             return 0;
         }
 
-        int i = 0, j = nums.length - 1;
-        // 1. 两端
-        if (nums[0] > nums[1]) {
-            return 0;
-        }
-        if (nums[j] > nums[j - 1]) {
-            return j;
-        }
-
-        // 2. 中间
-        i++;
-        j--;
+        int i = 1, j = n - 1;
         while (i <= j) {
             int m = i + j >>> 1;
-            if (nums[m - 1] >= nums[m]) { // 左边大
-                j = m - 1;
-            } else if (nums[m] <= nums[m + 1]) { // 右边大
+            if (nums[m - 1] < nums[m]) {
                 i = m + 1;
-            } else { // 峰值
-                return m;
+            } else if (nums[m - 1] > nums[m]) {
+                j = m - 1;
             }
         }
-        return -1;
-    }
-}
-```
-
-## 统一判断
-
-```java
-// 162. 寻找峰值
-class Solution {
-    public int findPeakElement(int[] nums) {
-        int i = 0, j = nums.length - 1;
-        while (i <= j) {
-            int m = i + j >>> 1;
-            if (m - 1 >= 0 && nums[m - 1] >= nums[m]) { // 左边大
-                j = m - 1;
-                continue;
-            } 
-            if (m + 1 < nums.length && nums[m] <= nums[m + 1]) { // 右边大
-                i = m + 1;
-                continue;
-            }
-            // 峰值
-            return m;
-        }
-        return -1;
+        return j;
     }
 }
 ```
