--- a/docs/题/leetcode/278. 第一个错误的版本.md
+++ b/docs/题/leetcode/278. 第一个错误的版本.md
@@ -1,13 +1,21 @@
+[278. 第一个错误的版本 - 力扣（LeetCode）](https://leetcode.cn/problems/first-bad-version/description/)
+
+> 你想找出导致之后所有版本出错的第一个错误的版本。
+>
+> `1 <= bad <= n <= 231 - 1`
+
+- [1...n] 是题目的范围，i和j的本质只是划定范围：`int i = 1, j = n`
+
 ```java
-// 278. 第一个错误的版本
+/* The isBadVersion API is defined in the parent class VersionControl.
+      boolean isBadVersion(int version); */
 public class Solution extends VersionControl {
     public int firstBadVersion(int n) {
-        // [1...n] 是题目的范围，i和j的本质只是划定范围
         int i = 1, j = n;
         while (i <= j) {
-            int m = (i + j) >>> 1;
+            int m = i + j >>> 1;
             // isBadVersion其实就是求leftmost
-            if (isBadVersion(m)) { // 目标在左边
+            if (isBadVersion(m)) {
                 j = m - 1;
             } else {
                 i = m + 1;
