--- a/docs/题/leetcode/34. 在排序数组中查找元素的第一个和最后一个位置.md
+++ b/docs/题/leetcode/34. 在排序数组中查找元素的第一个和最后一个位置.md
@@ -1,49 +1,69 @@
-## leftmost: 精准找到 -1
+[toc]
+
+[toc]
+
+精确查找，找不到返回-1
+
+## leftmost + rightmost
 
 ```java
-// 34. 在排序数组中查找元素的第一个和最后一个位置
+public int[] searchRange(int[] nums, int target) {
+    if (nums.length == 0) {
+        return new int[] { -1, -1 };
+    }
+    return new int[] { leftmost(nums, target), rightmost(nums, target) };
+}
+```
+
+```java
 class Solution {
     public int[] searchRange(int[] nums, int target) {
-        return new int[] { leftmost(nums, target), rightmost(nums, target) };
+        if (nums.length == 0) {
+            return new int[] { -1, -1 };
+        }
+        // 优化：如果leftmost找不到，那么直接返回，不用查rightmost
+        int left = leftmost(nums, target);
+        if (left == -1) {
+            return new int[] { -1, -1 };
+        }
+        return new int[] { left, rightmost(nums, target) };
     }
 
-    public static int leftmost(int[] nums, int target) {
+    public int leftmost(int[] nums, int target) {
         int i = 0, j = nums.length - 1;
-        int res = -1;
         while (i <= j) {
-            int m = (i + j) >>> 1;
-            if (target < nums[m]) {
+            int m = i + j >>> 1;
+            if (target <= nums[m]) {
                 j = m - 1;
-            } else if (nums[m] < target) {
-                i = m + 1;
             } else {
-                j = m - 1;
-                res = m;
+                i = m + 1;
             }
         }
-        return res;
+        if (i < 0 || i >= nums.length) {
+            return -1;
+        }
+        return nums[i] == target ? i : -1;
     }
 
-    public static int rightmost(int[] nums, int target) {
+    public int rightmost(int[] nums, int target) {
         int i = 0, j = nums.length - 1;
-        int res = -1;
         while (i <= j) {
-            int m = (i + j) >>> 1;
+            int m = i + j >>> 1;
             if (target < nums[m]) {
                 j = m - 1;
-            } else if (nums[m] < target) {
-                i = m + 1;
             } else {
                 i = m + 1;
-                res = m;
             }
         }
-        return res;
+        if (j < 0 || j >= nums.length) {
+            return -1;
+        }
+        return nums[j] == target ? j : -1;
     }
 }
 ```
 
-## leftmost: 找到<=
+## 只用leftmost或rightmost
 
 用【leftmost: 找到<=】来实现【leftmost: 精准找到 -1】的效果：
 
