--- a/docs/基础/02二分查找/二分查找.md
+++ b/docs/基础/02二分查找/二分查找.md
@@ -46,17 +46,16 @@
 
 ### 基础版：ij都查 
 
-元素在最左边 L 次， 元素在最右边 2L 次
 ```java
 // 704. 二分查找
 class Solution {
     public int search(int[] nums, int target) {
         int i = 0, j = nums.length - 1;
         while (i <= j) {                // [i,j] 范围内有东西
-            int m = (i + j) >>> 1;      /// (i+j)/2的向下取整
-            if (target < nums[m]) {             // 目标在左边
+            int m = i + j >>> 1;      	// 同 (i + j) >>> 1; 
+            if (nums[m] > target) {             // 往左找更小的，收缩右侧
                 j = m - 1;
-            } else if (nums[m] < target){       // 目标在右边
+            } else if (nums[m] < target){       // 往右找更大的，收缩左侧
                 i = m + 1;
             } else{                             // 找到了
                 return m;
@@ -70,178 +69,124 @@ class Solution {
 }
 ```
 
-插入位置为 `i`: 二分结束时一定有，i 指向首个大于 `target` 的元素，j 指向首个小于 `target` 的元素。
+插入位置为 `i` 属于 [-1, n]
+
+- **nums[i-1]肯定比target小，nums[i+1]肯定比target大**：不然就会移动
+
+- **i = j + 1**：这是while的退出条件
+
+### leftmost: 找到<=
+
+如果找到了，那么leftmost是最左的target，rightmost是最右的target。
+
+如果没找到，就会退化为普通的二分——nums[i-1]肯定比target小，nums[i+1]肯定比target大
+
+所以：
+
+- leftmost：找到的是 **>= `target` 的最小索引**
+- rightmost：找到的是 **<= `target` 的最大索引**
+
+```java
+public int leftmost(int[] nums, int target) {
+    int i = 0, j = nums.length - 1;
+    while (i <= j) {
+        int m = i + j >>> 1;
+        if (target <= nums[m]) {			// leftmost 把等于放在左边，继续收缩右侧
+            j = m - 1;
+        } else if(nums[m] < target){
+            i = m + 1;
+        }
+    }
+    return i;
+}
+
+public int rightmost(int[] nums, int target) {
+    int i = 0, j = nums.length - 1;
+    while (i <= j) {
+        int m = i + j >>> 1;
+        if (target < nums[m]) {
+            j = m - 1;
+        } else if(nums[m] >= target){							// rightmost 把等于放在右边，继续收缩左侧
+            i = m + 1;
+        }
+    }
+    return j;
+}
+```
 
 ### leftmost: 精准找到 -1
 
-返回的是最左侧的重复元素 / 返回的是最右侧的重复元素，**没找到则返回-1**.
+加个判断条件：
 
-leftmost：本来中间索引m处找到了，但是还往左找（移动j向左 `j = m - 1`）
+- i或j是否越界
+- nums[i] 或 nums[j] 是否是target
 
 ```java
-/**
- * <h3>二分查找 Leftmost </h3>
- * @return <p>找到则返回最靠左索引</p>
- * <p>找不到返回 -1</p>
- */
-public static int binarySearchLeftmost(int[] a, int target) {
-    int i = 0, j = a.length - 1;
-    int candidate = -1;
+public int leftmost(int[] nums, int target) {
+    int i = 0, j = nums.length - 1;
     while (i <= j) {
-        int m = (i + j) >>> 1;
-        if (target < a[m]) {
-            j = m - 1;
-        } else if (a[m] < target) {
-            i = m + 1;
-        } else {
-            candidate = m; // 记录候选位置
-            j = m - 1;     // 继续向左
-        }
-    }
-    return candidate;
-}
-```
-```java
-/**
- * <h3>二分查找 Rightmost </h3>
- * @return <p>找到则返回最靠右索引</p>
- * <p>找不到返回 -1</p>
- */
-public static int binarySearchRightmost(int[] a, int target) {
-    int i = 0, j = a.length - 1;
-    int candidate = -1;
-    while (i <= j) {
-        int m = (i + j) >>> 1;
-        if (target < a[m]) {
-            j = m - 1;
-        } else if (a[m] < target) {
-            i = m + 1;
-        } else {
-            candidate = m; // 记录候选位置
-            i = m + 1;	   // 继续向右
-        }
-    }
-    return candidate;
-}
-```
-### leftmost: 找到<=
-
-如果没找到，可以返回一个比 -1 更有用的索引。
-
-即：leftmost 找到大于等于目标 `>= x` 的最左元素的索引（下界），rightmost 找到小于等于目标  `<= x`  的最右元素的索引（上界）
-
-
-
-
-注意返回值超出数组的情况：leftmost`[0, n]`, rightmost`[-1, n-1]`
-- 如果target小于最小的，leftmost 返回 0，rightmost返回 **-1**
-- 如果target大于最大的，leftmost 返回 **n**，rightmost返回 n-1
-```java
-public static int binarySearchLeftmostUseful(int[] a, int target) {
-    int i = 0, j = a.length - 1;
-    while (i <= j) {
-        int m = (i + j) >>> 1;
-        if (target <= a[m]) {		// leftmost 把等于放在左边
+        int m = i + j >>> 1;
+        if (target <= nums[m]) {			// leftmost 把等于放在左边，继续收缩右侧
             j = m - 1;
         } else {
             i = m + 1;
         }
     }
-    return i;   // return j + 1;
+    if (i < 0 || i >= nums.length) {		// 因为下面是判断 nums[i]，这里校验的都是 i
+        return -1;
+    }   
+    return nums[i] == target ? i : -1;
 }
-循环完成后，i 指向最左边的 target ，j 指向首个小于 target 的元素。
 
-public static int binarySearchRightmostUseful(int[] a, int target) {
-    int i = 0, j = a.length - 1;
+public int rightmost(int[] nums, int target) {
+    int i = 0, j = nums.length - 1;
     while (i <= j) {
-        int m = (i + j) >>> 1;
-        if (target < a[m]) {
+        int m = i + j >>> 1;
+        if (target < nums[m]) {
             j = m - 1;
-        } else {				// rightmost 把等于放在右边
+        } else {							// rightmost 把等于放在右边，继续收缩左侧
             i = m + 1;
         }
     }
-    return j;	// return i - 1;
+    if (j < 0 || j >= nums.length) {		// 因为下面是判断 nums[j]，这里校验的都是 j
+        return -1;
+    }
+    return nums[j] == target ? j : -1;
 }
-循环完成后，i 指向首个大于 target 的元素 ，j 指向最右边的 target。
 ```
 
-leftmost理解：
 
-1. 简化：不用记录`candidate`，则直接去掉`candidate = m; // 记录候选位置`这一行。等于时继续往左 `j = m - 1;` 可以合并到上面的if-else中。
-2. return 返回的含义变化：leftmost 找到大于等于目标的最左元素 `return i`
 
-![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202410091359514.png)
+
 
 > 四种互相转化
 
-`>= x`  是 leftmost(x), 也是 rightmost(x-1) + 1 即 `(<= x-1) +1`
+`>= x`  是 leftmost(x)，`<= x`  是 rightmost(x)
+
+leftmost(x) = rightmost(x-1) + 1 即 `>= x ←→ (<= x-1) +1`
 
 `> x` 是 `>= x+1`
 
-`< x` 是 `(>=x) - 1`
-
-`<= x`  是 rightmost(x), 也是 leftmost(x+1) - 1 即 `(>= x+1) -1`
-
-### continue写法
-
-```java
-// 704. 二分查找
-class Solution {
-    public int search(int[] nums, int target) {
-        int i = 0, j = nums.length - 1;
-        while (i <= j) {                // [i,j] 范围内有东西
-            int m = (i + j) >>> 1;      /// (i+j)/2的向下取整
-            if (target < nums[m]) {             // 目标在左边
-                j = m - 1;
-                continue;
-            }
-            if (nums[m] < target){       // 目标在右边
-                i = m + 1;
-                continue;
-            } 
-            // 找到了
-            return m;
-        }
-        return -1;
-    }
-}
-```
-
-适合判断i j 边界条件的：
-
-​	 [162. 寻找峰值.md](..\题\leetcode\162. 寻找峰值.md) 
-
-
+`< x` 是 `<= x-1`
 
 ## leetcode
 
 搜索插入位置
 
-​	 [35. 搜索插入位置.md](..\题\leetcode\35. 搜索插入位置.md) 
+[35. 搜索插入位置.md](..\..\题\leetcode\35. 搜索插入位置.md)：不存在返回 i
 
-leftmost rightmost: 精准找到 -1版
+[34. 在排序数组中查找元素的第一个和最后一个位置.md](..\..\题\leetcode\34. 在排序数组中查找元素的第一个和最后一个位置.md)：leftmost rightmost -1版
 
-​	 [34. 在排序数组中查找元素的第一个和最后一个位置.md](..\题\leetcode\34. 在排序数组中查找元素的第一个和最后一个位置.md) 
+[278. 第一个错误的版本.md](..\..\题\leetcode\278. 第一个错误的版本.md)：leftmost 必定找的到
 
-leftmost i rightmost j 版
 
-​	 [278. 第一个错误的版本.md](..\题\leetcode\278. 第一个错误的版本.md) 
 
-​	 [34. 在排序数组中查找元素的第一个和最后一个位置.md](..\题\leetcode\34. 在排序数组中查找元素的第一个和最后一个位置.md) 
 
-变种
 
-​	[35. 搜索插入位置.md](..\题\leetcode\35. 搜索插入位置.md)  
+🚀 [162. 寻找峰值.md](..\..\题\leetcode\162. 寻找峰值.md)：峰值模板
 
-​	[278. 第一个错误的版本.md](..\题\leetcode\278. 第一个错误的版本.md)  
+ [852. 山脉数组的峰顶索引.md](..\..\题\leetcode\852. 山脉数组的峰顶索引.md) ：直接套模板
 
-变种之局部最大值系列：
-
-​	 [852. 山脉数组的峰顶索引.md](..\..\题\leetcode\852. 山脉数组的峰顶索引.md) 
-
-​	 [162. 寻找峰值.md](..\..\题\leetcode\162. 寻找峰值.md) 
-
-​	 [1901. 寻找峰值 II.md](..\题\leetcode\1901. 寻找峰值 II.md) 
+ [1901. 寻找峰值 II.md](..\..\题\leetcode\1901. 寻找峰值 II.md)：二维数组
 
  [2602. 使数组元素全部相等的最少操作次数.md](..\..\题\leetcode\2602. 使数组元素全部相等的最少操作次数.md) 
