--- a/docs/题/leetcode/1901. 寻找峰值 II.md
+++ b/docs/题/leetcode/1901. 寻找峰值 II.md
@@ -1,73 +1,118 @@
+[toc]
+
 O(m logn) 或 O(n logm)的暗示：那么必然是一个遍历，一个二分。
 
 PS：依然有【任意两个相邻元素均不相等】的题目条件。
 
-## 错误思路：行遍历 + 列二分
+## 错误思路：验证每行或每列的峰值
+
+- 遍历每行，二分找出该行的峰值，检验它是否满足上下也最大。
+- 遍历每列，二分找出该列的峰值，检验它是否满足左右也最大。
+
+失败的，因为每行或每列可能有多个峰值，二分只能返回其一。
 
 ```java
 class Solution {
     public int[] findPeakGrid(int[][] mat) {
-        int p = mat.length;
-        int q = mat[0].length;
-        for (int i = 0; i < p; i++) {
-            for (int j = 0; j < q; j++) {
-                int l = 0, r = q - 1;
-                while (l <= r) {
-                    int m = l + r >> 1;
-                    if (m - 1 >= 0 && mat[i][m - 1] >= mat[i][m]) {
-                        r = m - 1;
-                        continue;
-                    }
-                    if (m + 1 < q && mat[i][m] <= mat[i][m + 1]) {
-                        l = m + 1;
-                        continue;
-                    }
-                    if (check(mat, i, m)) {
-                        return new int[] { i, m };
-                    }
-                    break;
+        int m = mat.length;
+        int n = mat[0].length;
+
+        for (int i = 0; i < m; i++) {
+            int[] nums = mat[i];
+            int l = 1, r = n - 1;
+            while (l <= r) {
+                int mid = l + r >> 1;
+                if (nums[mid - 1] < nums[mid]) {
+                    l = mid + 1;
+                } else if (nums[mid - 1] > nums[mid]) {
+                    r = mid - 1;
                 }
             }
+            if (check_i(mat, i, r)) {
+                return new int[] { i, r };
+            }
         }
+
+        for (int j = 0; j < n; j++) {
+            int l = 1, r = m - 1;
+            while (l <= r) {
+                int mid = l + r >> 1;
+                if (mat[mid - 1][j] < mat[mid][j]) {
+                    l = mid + 1;
+                } else if (mat[mid - 1][j] > mat[mid][j]) {
+                    r = mid - 1;
+                }
+            }
+            if (check_j(mat, r, j)) {
+                return new int[] { r, j };
+            }
+        }
+
         return new int[] { -1, -1 };
     }
 
-    public boolean check(int[][] mat, int i, int t) {
-        if (i == 0) {
-            if (mat[i][t] > mat[i + 1][t]) {
-                return true;
-            }
-        } else if (i == mat.length - 1) {
-            if (mat[i][t] > mat[i - 1][t]) {
-                return true;
+    public boolean check_i(int[][] mat, int i, int j) {
+        if (i != 0) {
+            if (mat[i][j] < mat[i - 1][j]) {
+                return false;
             }
         }
-        return false;
+        if (i != mat.length - 1) {
+            if (mat[i][j] < mat[i + 1][j]) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    public boolean check_j(int[][] mat, int i, int j) {
+        if (j != 0) {
+            if (mat[i][j] < mat[i][j - 1]) {
+                return false;
+            }
+        }
+        if (j != mat[0].length - 1) {
+            if (mat[i][j] < mat[i][j + 1]) {
+                return false;
+            }
+        }
+        return true;
     }
 }
 ```
 
+
+
 ```
 输入
 mat =
-[[70,50,40,30,20],[100,1,2,3,4]]
+[
+    [2, 1, 99, 98, 22, 21, 20],
+    [3, 2, 1, 2, 3, 4, 19],
+    [4, 3, 2, 1, 2, 3, 18],
+    [5, 4, 3, 2, 1, 2, 17],
+    [6, 5, 4, 3, 2, 1, 16],
+    [7, 6, 5, 4, 3, 2, 15],
+    [8, 9, 10, 11, 12, 13, 14]
+]
 
 输出
 [-1,-1]
-
 预期结果
-[1,0]
+[0,2]
 ```
-
-这就是二分漏了右边的天然缺陷。
 
 ## 正确思路：行二分，列遍历最大
 
-和上面的区别就是，我们获取的是最大值，而不是而不是局部最大。
+和上面的区别就是，我们获取的是最大值，而不是而不是峰值。
 
+假如行二分：
 
-
-如果本行的最大值没有上一行同列下标大，那么上一行肯定存在更大的最大值，它肯定比本行大。
+- mid的元素是该行的最大值及其列
+- 比较是最大值所在的列的上下
+  - 本行的最大值没有上一行同列下标大，那么上一行的同列更大，甚至上一行的最大值更大。
+  - 切换到上一行，再去找它的最大值及其列。
+- 这样相当于压缩列，又变成找峰值。
 
 ```java
 class Solution {
@@ -97,6 +142,50 @@ class Solution {
             return new int[] { m, maxIdx };
         }
         return new int[] { -1 };
+    }
+}
+```
+
+```java
+class Solution {
+    public int[] findPeakGrid(int[][] mat) {
+        int m = mat.length;
+        int n = mat[0].length;
+
+        int l = 1, r = m - 1;
+        int max_idx = 0;
+        while (l <= r) {
+            int mid = l + r >> 1;
+
+            int[] nums = mat[mid];
+            int max_val = nums[0];
+            max_idx = 0;
+            for (int idx = 1; idx < n; idx++) {
+                if (max_val < nums[idx]) {
+                    max_val = nums[idx];
+                    max_idx = idx;
+                }
+            }
+            // System.out.printf("mat[%d][%d]=%d, l=%d, r=%d\n", mid, max_idx, max_val, l,
+            // r);
+            if (mat[mid - 1][max_idx] < mat[mid][max_idx]) {
+                l = mid + 1;
+            } else if (mat[mid - 1][max_idx] > mat[mid][max_idx]) {
+                r = mid - 1;
+            }
+        }
+
+        // 找到后，还要再找该行的最大值
+        int[] nums = mat[r];
+        int max_val = nums[0];
+        max_idx = 0;
+        for (int idx = 1; idx < n; idx++) {
+            if (max_val < nums[idx]) {
+                max_val = nums[idx];
+                max_idx = idx;
+            }
+        }
+        return new int[] { r, max_idx };
     }
 }
 ```
