--- a/docs/题/leetcode/35. 搜索插入位置.md
+++ b/docs/题/leetcode/35. 搜索插入位置.md
@@ -1,10 +1,13 @@
+[35. 搜索插入位置 - 力扣（LeetCode）](https://leetcode.cn/problems/search-insert-position/description/)
+
 基础版
+
 ```java
 class Solution {
     public int searchInsert(int[] nums, int target) {
         int i = 0, j = nums.length - 1;
         while (i <= j) {
-            int m = (i + j) >>> 1;
+            int m = i + j >>> 1;
             if (target < nums[m]) {
                 j = m - 1;
             } else if (nums[m] < target) {
