--- a/docs/题/leetcode/852. 山脉数组的峰顶索引.md
+++ b/docs/题/leetcode/852. 山脉数组的峰顶索引.md
@@ -1,21 +1,54 @@
+[toc]
+
+> 给定一个长度为 `n` 的整数 **山脉** 数组 `arr` ，其中的值递增到一个 **峰值元素** 然后递减。
+>
+> 题目数据 **保证** `arr` 是一个山脉数组
+>
+> `3 <= arr.length <= 105`
+
+
+
+山脉数组：其中的值递增到一个 **峰值元素** 然后递减:
+
+- 不会出现 单调递增、单调递减、平（相邻元素相等）的情况。
+- 峰顶的下标一定在区间 [1,*n*−2] 中
+
+
+
+其实无需这么严苛，峰值出现在首末尾都行。
+
 ```java
 class Solution {
     public int peakIndexInMountainArray(int[] arr) {
-        int q = arr.length - 1;
-        int i = 0, j = arr.length - 1;
+        // m - 1：[1, n-1]
+        int i = 1, j = arr.length - 1;
         while (i <= j) {
-            int m = i + j >> 1;
-            if (m - 1 >= 0 && arr[m - 1] > arr[m]) {
-                j = m - 1;
-                continue;
-            }
-            if (m + 1 < q && arr[m] < arr[m + 1]) {
+            int m = i + j >>> 1;
+            if (arr[m - 1] < arr[m]) {
                 i = m + 1;
-                continue;
+            } else if (arr[m - 1] > arr[m]) {
+                j = m - 1;
             }
-            return m;
         }
-        return -1;
+        return j;
+    }
+}
+```
+
+```java
+class Solution {
+    public int peakIndexInMountainArray(int[] arr) {
+        int i = 0, j = arr.length - 2;
+        // m + 1：[0, n-2]
+        while (i <= j) {
+            int m = i + j >>> 1;
+            if (arr[m] < arr[m + 1]) {
+                i = m + 1;
+            } else if (arr[m] > arr[m + 1]) {
+                j = m - 1;
+            }
+        }
+        return i;
     }
 }
 ```
