--- a/docs/基础/02二分查找/二分查找.md
+++ b/docs/基础/02二分查找/二分查找.md
@@ -75,7 +75,7 @@ class Solution {
 
 - **i = j + 1**：这是while的退出条件
 
-### leftmost: 找到<=
+### leftmost: 找到 >=
 
 如果找到了，那么leftmost是最左的target，rightmost是最右的target。
 
