--- a/docs/基础/04链表/链表.md
+++ b/docs/基础/04链表/链表.md
@@ -118,9 +118,11 @@ class Solution {
 }
 ```
 
- [21. 合并两个有序链表.md](..\..\题\leetcode\21. 合并两个有序链表.md)  
+[21. 合并两个有序链表.md](..\..\题\leetcode\21. 合并两个有序链表.md)
 
-[23. 合并 K 个升序链表.md](..\..\题\leetcode\23. 合并 K 个升序链表.md) 
+[86. 分隔链表.md](..\..\题\leetcode\86. 分隔链表.md)
+
+[23. 合并 K 个升序链表.md](..\..\题\leetcode\23. 合并 K 个升序链表.md)
 
 
 ### 🚀反转链表
@@ -164,17 +166,46 @@ class Solution {
 
 ### pre cur前后双指针
 
+#### 倒数元素
+
+规则：
+
+- cur先走k步。
+- pre和cur一起走，cur到null（走了n-k步），pre就是从第一个走到 n-k+1个结点，即倒k。
+- 无论是从head还是dummy走，都不影响结果，只要同一个起点，倒k看的是差距“cur先走k步”。
+
+算数：
+
+- **n个节点**，那么从第一个节点出发到null，**经过n步**。
+- 第i个节点，经过k步，走到第 i+k个节点。
+- 正数第i个节点，对应倒数第 n - i + 1个：n个减去i个剩下右边的个数，算上自己再+1.
+
+```java
+ListNode cur = head;
+for (int i = 0; i < n; i++) {
+    cur = cur.next;
+}
+ListNode pre = head;
+while (cur != null) {
+    cur = cur.next;
+    pre = pre.next;
+}
+return pre;
+```
+
+[19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) ：因为删除需要更前面，所以找n+1，且必须从dummy出发
+
 ### slow fast快慢双指针
 
 #### 🚀链表的中间结点
 
-slow fast
+和倒k一样：一个走n步，一个走n/2步。
 
 - 因为cur移动两格，`cur = cur.next.next`，所以 `cur != null && cur.next != null`，不然空指针异常
 
 算上NULL节点后的个数，就和int索引的规律一样：
 
-- 偶数个：返回中间偏左。→对应对应不算null的中间
+- 偶数个：返回中间偏左。👉对应不算null的中间
 - 奇数个：返回中间。👉对应不算null的中间偏右
 
 ![image-20241010093910279](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202410100939317.png)
@@ -240,9 +271,11 @@ class Solution {
 
 真题（1221→空，不留，且可能回去再删）：
 
- [删除链表重复节点.md](..\..\题\笔试\Untitled Folder\删除链表重复节点.md)（1221→[]，不留，bu保证输入升序） ：
+ [删除链表重复节点.md](..\..\题\笔试\Untitled Folder\删除链表重复节点.md)（1221→[]，不留，不保证输入升序） ：
 
-237 [203. 移除链表元素.md](..\..\题\leetcode\203. 移除链表元素.md) 
+237 
+
+[203. 移除链表元素.md](..\..\题\leetcode\203. 移除链表元素.md) 
 
 
 
@@ -254,7 +287,13 @@ class Solution {
 
 ### 环
 
- [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) ：slow和fast相遇
+-  `fast` 提前能走到null而结束，说明链表中没有环；
+
+-  `fast` 走着走着竟然和 `slow` 相遇了，说明链表中含有环。
+
+
+
+[141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) ：slow和fast相遇
 
 [142. 环形链表 II.md](..\..\题\leetcode\142. 环形链表 II.md) ：slow和fast相遇，再slow和head相遇
 
