--- a/docs/题/leetcode/141. 环形链表.md
+++ b/docs/题/leetcode/141. 环形链表.md
@@ -1,4 +1,9 @@
+[toc]
+
+[141. 环形链表 - 力扣（LeetCode）](https://leetcode.cn/problems/linked-list-cycle/)
+
 ## 快慢指针
+
 fast指针和slow指针的追击，注意判断追击的条件写在下面。
 ```java
 public class Solution {
