--- a/docs/题/leetcode/142. 环形链表 II.md
+++ b/docs/题/leetcode/142. 环形链表 II.md
@@ -1,3 +1,7 @@
+[toc]
+
+[142. 环形链表 II - 力扣（LeetCode）](https://leetcode.cn/problems/linked-list-cycle-ii/description/)
+
 ```java
 public class Solution {
     public ListNode detectCycle(ListNode head) {
@@ -5,15 +9,16 @@ public class Solution {
         while (fast != null && fast.next != null) {
             fast = fast.next.next;
             slow = slow.next;
-            if (slow == fast) {
-                while (slow != head) {
+            if (fast == slow) {
+                fast = head;
+                while (slow != fast) {
                     slow = slow.next;
-                    head = head.next;
+                    fast = fast.next;
                 }
                 return slow;
             }
         }
-        // 空、只有一个节点
+        // 空
         return null;
     }
 }
