--- a/docs/题/leetcode/19. 删除链表的倒数第 N 个结点.md
+++ b/docs/题/leetcode/19. 删除链表的倒数第 N 个结点.md
@@ -1,26 +1,27 @@
+[toc]
 
 ## 快慢指针
-因为要删除，**引入哨兵**。快慢指针都从哨兵开始
 
-找的不是倒n，而是**倒 n+1**。因为删除要找前一个位置， for 迭代 n+1次
+因为删除需要更前面，所以**找k+1**，那么**必须从dummy出发**
 
-![image-20240929221010650](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409292210694.png)
+- 否则如果要删第一个结点倒n，而从head出发，只能走n步，空指针了。
 
 ```java
 class Solution {
-    public ListNode removeNthFromEnd(ListNode head, int n) {
-        ListNode sentinal = new ListNode(-1, head);
-        ListNode slow = sentinal;
-        ListNode fast = sentinal;
-        for(int i = 0 ; i < n + 1; i++){
-            fast = fast.next;
+    public ListNode removeNthFromEnd(ListNode head, int k) {
+        ListNode dummy = new ListNode();
+        dummy.next = head;
+        ListNode cur = dummy;
+        for (int i = 0; i < k + 1; i++) {
+            cur = cur.next;
         }
-        while(fast != null){
-            fast = fast.next;
-            slow = slow.next;
+        ListNode pre = dummy;
+        while (cur != null) {
+            cur = cur.next;
+            pre = pre.next;
         }
-        slow.next = slow.next.next;
-        return sentinal.next;
+        pre.next = pre.next.next;
+        return dummy.next;
     }
 }
 ```
