--- a/docs/题/leetcode/23. 合并 K 个升序链表.md
+++ b/docs/题/leetcode/23. 合并 K 个升序链表.md
@@ -8,11 +8,11 @@ $O(n \times k \log k)$
 
 - 带返回值
   - 合并数组，可以索引 `arr[p1], arr[p2]`，那么链表数组的索引是什么？不是索引
-  - 是合并两个链表后的新链表头节点。
+  - **是合并两个链表后的新链表头节点。**
 
 - `if(l<r)` 
   - 合并数组，那么我们管`l==r`的情况
-  - 合并链表，当`l==r`时，我们还需要返回 `lists[l]`
+  - 合并链表，**当`l==r`时，我们还需要返回 `lists[l]`**
 
 
 ```java
