--- a/docs/基础/04链表/链表.md
+++ b/docs/基础/04链表/链表.md
@@ -259,7 +259,11 @@ class Solution {
 
 
 
-### 删除元素 
+### 删除元素
+
+[203. 移除链表元素.md](..\..\题\leetcode\203. 移除链表元素.md) 
+
+
 
 [19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) ：快慢指针，删除要sentinel，找倒 n+1
 
@@ -275,37 +279,100 @@ class Solution {
 
 237 
 
-[203. 移除链表元素.md](..\..\题\leetcode\203. 移除链表元素.md) 
-
-
-
-### 相交
-
-[160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) 
-
 
 
 ### 环
+
+#### 判断是否有环
 
 -  `fast` 提前能走到null而结束，说明链表中没有环；
 
 -  `fast` 走着走着竟然和 `slow` 相遇了，说明链表中含有环。
 
+```java
+public class Solution {
+    public boolean hasCycle(ListNode head) {
+        ListNode slow = head, fast = head;
+        while(fast != null && fast.next != null){
+            fast = fast.next.next;
+            slow = slow.next;
+            // 一定要写在下面，否则head==head
+            if(slow == fast){
+                return true;
+            }
+        }
+        return false;
+    }
+}
+```
 
+[141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) 
 
-[141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) ：slow和fast相遇
+#### 判断环的大小
+
+相遇后再相遇，fast比slow多走的步即为环的大小。
+
+```java
+public class Solution {
+    public boolean hasCycle(ListNode head) {
+        ListNode slow = head, fast = head;
+        while (fast != null && fast.next != null) {
+            slow = slow.next;
+            fast = fast.next.next;
+            if (slow == fast) {
+                int cnt = 1;
+                slow = slow.next;
+                fast = fast.next.next;
+                while (slow != fast) {
+                    slow = slow.next;
+                    fast = fast.next.next;
+                    cnt++;
+                }
+                System.out.println(cnt);
+                return true;
+            }
+        }
+        return false;
+    }
+}
+```
+
+#### 环的入口
+
+```java
+public class Solution {
+    public ListNode detectCycle(ListNode head) {
+        ListNode slow = head, fast = head;
+        while (fast != null && fast.next != null) {
+            slow = slow.next;
+            fast = fast.next.next;
+            if (slow == fast) {
+                fast = head;
+                while (slow != fast) {
+                    slow = slow.next;
+                    fast = fast.next;
+                }
+                return slow;
+            }
+        }
+        return null;
+    }
+}
+```
 
 [142. 环形链表 II.md](..\..\题\leetcode\142. 环形链表 II.md) ：slow和fast相遇，再slow和head相遇
 
- [获取倒n.md](..\..\题\leetcode\获取倒n.md) [19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) 
+### 相交
+
+[160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) ：当输入链表都没环时
+
+[带环相交链表.md](..\..\题\leetcode\带环相交链表.md) 
 
 ### 链表进位
 
  [2. 两数相加.md](..\..\题\leetcode\2. 两数相加.md)  ：**逆序**（进位往右，链表左对齐） 
 
 [445. 两数相加 II.md](..\..\题\leetcode\445. 两数相加 II.md) : 顺序（进位往左，链表右对齐）
-
-
 
 ### 回文
 
