--- a/docs/题/leetcode/160. 相交链表.md
+++ b/docs/题/leetcode/160. 相交链表.md
@@ -1,34 +1,6 @@
-while中 a != b，不仅仅是相交链表，还包括不相交链表两者都是null。
+[toc]
 
-![image-20240928232710221](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409282327272.png)
-
-```java
-public class Solution {
-    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
-        if(headA == null || headB == null){
-            return null;
-        }
-
-        ListNode a = headA, b = headB;
-        while( a != b ){
-            if(a == null){
-                a = headB;
-            }else{
-                a = a.next;
-            }
-            
-            if(b == null){
-                b = headA;
-            }else{
-                b = b.next;
-            }
-        }
-        return a;
-    }
-}
-```
-
----
+[160. 相交链表 - 力扣（LeetCode）](https://leetcode.cn/problems/intersection-of-two-linked-lists/description/)
 
 ## 🚀长度补齐
 
@@ -36,21 +8,33 @@ O(m+n), O(1)
 ```java
 public class Solution {
     public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
-        if (headA == null || headB == null) {
-            return null;
+        ListNode a = headA, b = headB;
+        while (a != b) {
+            if (a == null) {
+                a = headB;
+            } else {
+                a = a.next;
+            }
+
+            if (b == null) {
+                b = headA;
+            } else {
+                b = b.next;
+            }
         }
-        ListNode pA = headA, pB = headB;
-        while (pA != pB) {
-            pA = pA == null ? headB : pA.next;
-            pB = pB == null ? headA : pB.next;
-        }
-        return pA;
+        return a;
     }
 }
 ```
-遍历两次，那么长度就被对齐了。同步移动的指针位置处就是相交的结点或null
-- 相交的结点
-- null：两个链表不相交，长度一样还是不一样，都会两指针同时指向null，null==null为true退出。
+遍历两次，那么长度就被对齐了。同步移动的指针位置处就是相交的结点
+- 甚至不相交的链表，可以认为相交节点是空节点null：两个链表不相交，长度一样还是不一样，都会两指针同时指向null，null==null为true退出。
+
+  ![image-20250317183450996](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202503171834044.png)
+
+
+
+![image-20240928232710221](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409282327272.png)
+
 ## 转化为环
 
 ```java
@@ -65,6 +49,7 @@ public class Solution {
         }
         head.next = headB;
         ListNode flag = detectCycle(headA);
+        // huan
         head.next = null;
         return flag;
     }
